package com.elias.attendancecontrol.model.entity;
public enum AttendanceStatus {
    PRESENT,
    LATE,
    ABSENT
}
