package com.elias.attendancecontrol.model.entity;
public enum EnrollmentStatus {
    ENROLLED,    // Usuario inscrito activamente
    DROPPED,     // Usuario dado de baja
    COMPLETED    // Actividad completada
}
