package com.elias.attendancecontrol.model.entity;
public enum OrganizationPlan {
    FREE,        // Plan gratuito limitado (50 usuarios, 10 actividades)
    BASIC,       // Plan básico de pago (200 usuarios, 50 actividades)
    PREMIUM,     // Plan premium con más features (1000 usuarios, 200 actividades)
    ENTERPRISE   // Plan empresarial ilimitado
}
