package com.elias.attendancecontrol.model.entity;
public enum OrganizationRole {
    OWNER,          // Propietario - Representante de la organización (super admin)
    ADMIN,          // Administrador de la organización
    MEMBER        // Miembro regular
}
