package com.elias.attendancecontrol.model.entity;
public enum SessionStatus {
    PLANNED,
    ACTIVE,
    CLOSED,
    CANCELLED
}
